resources/js/assets/auth/css/style.css
/*
 Template Name: Veltrix - Responsive Bootstrap 4 Admin Dashboard
 Author: Themesbrand
 Website: www.themesbrand.com
 File: Main Css File
*/
/* ============
TABLES OF CSS
---------------

01. General
02. Bootstrap-custom
03. Helper
04. Waves Effect
05. Menu
06. Buttons
07. Cards
08. Email
09. Summernote
10. Alerts
11. Demo Only
12. Pagination
13. Progress
14. Popover - Tooltips
15. Sweet Alerts
16. Tabs
17. Form-elements
18. Form-validation
19. Form-advanced
20. Form-editors
21. Form-upload
22. Calendar
23. Tables
24. Maps
25. Range-slider
26. Session-timeout
27. Charts
28. Widgets
29. TImeline
30. Directory
31. Extra Pages
32. gallery
33. Invoice
34. Account Pages
35. Responsive


*/
@import url("https://fonts.googleapis.com/css?family=Roboto:400,500|Sarabun:400,600,700");
/* ======
01. General
   ====== */
/* ==============
  General
===================*/
body {
  background-repeat: repeat;
  background: #f8f8fa;
  font-family: "Roboto", sans-serif;
  color: #5b626b;
  font-size: 14px;
}

html {
  overflow-x: hidden;
  position: relative;
  min-height: 100%;
}

h1, h2, h3, h4, h5, h6 {
  margin: 10px 0;
  font-family: "Sarabun", sans-serif;
  font-weight: 600;
}

p {
  line-height: 1.7;
}

svg {
  max-width: 100%;
}

a {
  color: #6c757d;
}

a:hover {
  outline: 0;
  text-decoration: none;
}

a:active {
  outline: 0;
  text-decoration: none;
}

a:focus {
  outline: 0;
  text-decoration: none;
}

b, strong {
  font-weight: 500;
}

.container-alt {
  margin-left: auto;
  margin-right: auto;
  padding-left: 15px;
  padding-right: 15px;
}

#wrapper {
  height: 100%;
  overflow: hidden;
  width: 100%;
}

.slimScrollDiv {
  height: auto !important;
}

.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
  background-color: #626ed4;
}

/* Social */
.social-links li a {
  border-radius: 50%;
  display: inline-block;
  height: 30px;
  line-height: 30px;
  width: 30px;
  text-align: center;
}

/* ======
02. Bootstrap-custom
   ====== */
/* ==============
  Bootstrap-custom
===================*/
.dropdown-menu {
  padding: 4px 0;
  font-size: 14px;
  -webkit-box-shadow: 0px 0px 13px 0px rgba(236, 236, 241, 0.44);
          box-shadow: 0px 0px 13px 0px rgba(236, 236, 241, 0.44);
  background-color: #ffffff;
  border-color: #e9ecef;
  margin: 0;
}

.dropdown-item {
  background-color: #ffffff;
  padding: .55rem 1.5rem;
}

.dropdown-item:active, .dropdown-item:hover {
  background-color: #f8f9fa;
  color: #2a3142;
}

.dropdown-item.active, .dropdown-item:active {
  background-color: #f8f9fa;
  color: #2a3142;
}

.breadcrumb > li + li:before {
  padding: 0 5px;
  color: #9ca8b3;
  content: "\f105" !important;
  font-family: 'Font Awesome 5 Free';
  font-weight: 900;
}

.blockquote {
  padding: 10px 20px;
  margin-bottom: 20px;
  border-left: 4px solid #e9ecef;
}

.blockquote-reverse {
  border-left: 0;
  border-right: 4px solid #e9ecef;
  text-align: right;
}

.bg-primary {
  background-color: #626ed4 !important;
}

.bg-success {
  background-color: #02a499 !important;
}

.bg-info {
  background-color: #38a4f8 !important;
}

.bg-warning {
  background-color: #f8b425 !important;
}

.bg-danger {
  background-color: #ec4561 !important;
}

.bg-muted {
  background-color: #9ca8b3 !important;
}

.bg-white {
  background-color: #ffffff !important;
}

.text-white {
  color: #ffffff !important;
}

.text-danger {
  color: #ec4561 !important;
}

.text-muted {
  color: #9ca8b3 !important;
}

.text-primary {
  color: #626ed4 !important;
}

.text-warning {
  color: #f8b425 !important;
}

.text-success {
  color: #02a499 !important;
}

.text-info {
  color: #38a4f8 !important;
}

.text-dark {
  color: #2a3142 !important;
}

.badge {
  font-weight: 500;
}

.badge-primary {
  background-color: #626ed4;
}

.badge-success {
  background-color: #02a499;
}

.badge-info {
  background-color: #38a4f8;
}

.badge-warning {
  background-color: #f8b425;
  color: #ffffff;
}

.badge-danger {
  background-color: #ec4561;
}

.badge-dark {
  background-color: #2a3142;
}

dt {
  font-weight: 500;
}

.spinner-border, .spinner-grow {
  margin-right: 10px;
  margin-top: 10px;
}

.custom-control-input:checked ~ .custom-control-label:before {
  border-color: #626ed4;
  background-color: #626ed4;
}

/* ======
03. Helper
   ====== */
/* ==============
  Helper Classes
===================*/
.p-0 {
  padding: 0;
}

.p-t-10 {
  padding-top: 10px;
}

.p-b-10 {
  padding-bottom: 10px;
}

.m-0 {
  margin: 0;
}

.m-r-5 {
  margin-right: 5px;
}

.m-r-10 {
  margin-right: 10px;
}

.m-r-15 {
  margin-right: 15px;
}

.m-l-10 {
  margin-left: 10px;
}

.m-l-15 {
  margin-left: 15px;
}

.m-t-5 {
  margin-top: 5px;
}

.m-t-10 {
  margin-top: 10px;
}

.m-t-15 {
  margin-top: 15px;
}

.m-t-20 {
  margin-top: 20px;
}

.m-t-30 {
  margin-top: 30px;
}

.m-t-40 {
  margin-top: 40px;
}

.m-b-5 {
  margin-bottom: 5px;
}

.m-b-10 {
  margin-bottom: 10px;
}

.m-b-15 {
  margin-bottom: 15px;
}

.m-b-20 {
  margin-bottom: 20px;
}

.m-b-30 {
  margin-bottom: 30px;
}

.w-30 {
  max-width: 30px;
}

.w-xs {
  min-width: 80px;
}

.w-sm {
  min-width: 95px;
}

.w-md {
  min-width: 110px;
}

.w-lg {
  min-width: 140px;
}

.l-h-23 {
  line-height: 23px;
}

.l-h-34 {
  line-height: 34px;
}

.font-12 {
  font-size: 12px;
}

.font-14 {
  font-size: 14px;
}

.font-16 {
  font-size: 16px;
}

.font-18 {
  font-size: 18px;
}

.font-20 {
  font-size: 20px;
}

.font-24 {
  font-size: 24px;
}

.font-30 {
  font-size: 30px;
}

.thumb-sm {
  height: 32px;
  width: 32px;
}

.thumb-md {
  height: 48px;
  width: 48px;
}

.thumb-lg {
  height: 88px;
  width: 88px;
}

.font-500 {
  font-weight: 500;
}

.font-600 {
  font-weight: 600;
}

.header-title {
  font-size: 16px;
}
/* ... */

